styles.css
html {
  color: rgba(255, 255, 255, 1);
  font-family: "Roboto", Arial, Helvetica, sans-serif;
  scroll-behavior: smooth;
}

html,
main,
.sidebar,
.sidebar-header-container,
.sidebar-navigation,
.sidebar-navigation-container,
a,
footer {
  display: flex;
}

html,
.sidebar-header-container,
.sidebar-navigation-container,
a,
footer {
  align-items: center;
}

html,
.sidebar-header,
.sidebar-header-container,
.sidebar-navigation-container,
.sidebar-navigation {
  justify-content: center;
}

html,
body,
main,
h1 {
  margin: 0;
}

html,
body,
main {
  padding: 0;
}

html,
body,
main,
.sidebar {
  height: 100%;
}

html,
body,
footer,
main {
  width: 100%;
}

body {
  background-image: radial-gradient(
    circle at center,
    rgba(30, 58, 138, 1),
    rgba(0, 8, 20, 1)
  );
}

body,
.sidebar {
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.sidebar {
  background-image: radial-gradient(
    circle at center,
    rgba(0, 53, 102, 1),
    rgba(30, 58, 138, 1)
  );
  border-bottom: none;
  border-left: none;
  border-right-color: rgba(0, 0, 0, 1);
  border-right-style: solid;
  border-right-width: 1px;
  box-shadow: 0px 0px 5px rgba(0, 0, 0, 1);
  padding: 12px;
  width: 12%;
}

.sidebar,
.sidebar-header-container,
.sidebar-navigation,
a {
  gap: 12px;
}

.sidebar,
.sidebar-navigation {
  flex-direction: column;
}

.sidebar-header {
  align-items: flex-start;
  transition: all 1s ease;
}

.sidebar-header:hover {
  transform: scale(1.03);
}

.dashboard-icon {
  height: 48px;
  width: 48px;
}

.dashboard-icon,
.navigation-icon,
.github-logo {
  filter: invert(100%);
}

.sidebar-header-text {
  font-size: 28px;
  text-shadow: 0px 3px 3px rgba(0, 0, 0, 1);
}

.sidebar-header,
a {
  cursor: pointer;
}

.sidebar-header-text,
.navigation-text {
  font-weight: 900;
}

a:not(.github-logo) {
  transition: all 0.75s ease;
}

a:not(.github-logo):hover {
  transform: scale(1.05);
}

.navigation-icon {
  height: 24px;
  width: 24px;
}

.navigation-text {
  text-shadow: 0px 2px 2px rgba(0, 0, 0, 1);
}

.content {
  flex: 1;
}

footer {
  bottom: 0;
  left: 0;
  position: fixed;
  justify-content: flex-end;
}

.github-logo {
  height: 24.5px;
  opacity: 7.5%;
  padding-bottom: 6px;
  padding-left: 0px;
  padding-right: 6px;
  padding-top: 0px;
  width: 24px;
}

.colours {
  color: rgba(0, 8, 20, 1);
  color: rgba(0, 29, 61, 1);
  color: rgba(0, 53, 102, 1);
  color: rgba(255, 195, 0, 1);
  color: rgba(255, 214, 10, 1);
}

